Fixed pointermove events being canceled on mobile.

--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@ canvas {
     margin: 0 auto;
     background: #ffffff;
     pointer-events: auto;
+    touch-action: none;
     
 }
 
